@@ -42,8 +42,9 @@
         <requires eq="mingwrt-*-mingw32-dev.tar" />
         <requires eq="w32api-*-mingw32-dev.tar" />
         <release tarname="gcc-core-4.9.3-1-mingw32-bin.tar.xz">
-          <requires eq="libquadmath-%-mingw32-dll-0.tar" />
           <requires eq="libgcc-%-mingw32-dll-1.tar" />
+          <requires eq="libquadmath-%-mingw32-dll-0.tar" />
+          <requires eq="libmpc-*-mingw32-dll-3.tar" />
         </release>
         <release tarname="gcc-core-4.8.1-4-mingw32-bin.tar.lzma">
           <requires eq="gcc-core-%-mingw32-dev.tar" />
@@ -100,17 +101,29 @@
 
       <component class="dev">
         <requires eq="mingw32-libgcc-%-mingw32-dll-1.tar" />
-        <requires eq="mingw32-libssp-%-mingw32-dll-0.tar" />
-        <requires eq="mingw32-libgomp-%-mingw32-dll-1.tar" />
         <requires eq="mingw32-libquadmath-%-mingw32-dll-0.tar" />
         <release tarname="gcc-4.9.3-1-mingw32-dev.tar.xz">
           <download tarname="none" />
         </release>
-        <release tarname="gcc-core-4.8.1-4-mingw32-dev.tar.lzma" />
-        <release tarname="gcc-core-4.8.1-3-mingw32-dev.tar.lzma" />
-        <release tarname="gcc-core-4.8.1-2-mingw32-dev.tar.lzma" />
-        <release tarname="gcc-core-4.8.1-1-mingw32-dev.tar.lzma" />
+        <release tarname="gcc-core-4.8.1-4-mingw32-dev.tar.lzma">
+          <requires eq="mingw32-libssp-%-mingw32-dll-0.tar" />
+          <requires eq="mingw32-libgomp-%-mingw32-dll-1.tar" />
+        </release>
+        <release tarname="gcc-core-4.8.1-3-mingw32-dev.tar.lzma">
+          <requires eq="mingw32-libssp-%-mingw32-dll-0.tar" />
+          <requires eq="mingw32-libgomp-%-mingw32-dll-1.tar" />
+        </release>
+        <release tarname="gcc-core-4.8.1-2-mingw32-dev.tar.lzma">
+          <requires eq="mingw32-libssp-%-mingw32-dll-0.tar" />
+          <requires eq="mingw32-libgomp-%-mingw32-dll-1.tar" />
+        </release>
+        <release tarname="gcc-core-4.8.1-1-mingw32-dev.tar.lzma">
+          <requires eq="mingw32-libssp-%-mingw32-dll-0.tar" />
+          <requires eq="mingw32-libgomp-%-mingw32-dll-1.tar" />
+        </release>
         <release tarname="gcc-core-4.7.2-1-mingw32-dev.tar">
+          <requires eq="mingw32-libssp-%-mingw32-dll-0.tar" />
+          <requires eq="mingw32-libgomp-%-mingw32-dll-1.tar" />
           <download tarname="none" />
         </release>
       </component>
@@ -187,9 +200,7 @@
       <licence tarname="gcc-%-mingw32-lic.tar.*" />
 
       <component class="dll">
-        <release tarname="libgcc-4.9.3-1-mingw32-dll-1.tar.xz">
-          <requires eq="mingw32-libmpc-*-mingw32-dll-3.tar" />
-        </release>
+        <release tarname="libgcc-4.9.3-1-mingw32-dll-1.tar.xz" />
         <release tarname="libgcc-4.8.1-4-mingw32-dll-1.tar">
           <download tarname="gcc-core-4.8.1-4-mingw32-dll.tar.lzma"/>
           <requires eq="mingw32-libmpc-*-mingw32-dll-3.tar" />
@@ -814,3 +825,4 @@
   </package-collection>
 </software-distribution>
 <!-- vim: set nocompatible expandtab fileformat=unix textwidth=80 tabstop=2 shiftwidth=2: -->
+
